--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -6,3 +6,8 @@ a
 
 .jumbotron
   background: url("/images/trip_jumbotron.jpg") no-repeat left center
+
+nav
+  background-color: #49cfff;
+.navbar-brand .nav-link
+  color: #000;
