--- a/views/manager/offer_place.pug
+++ b/views/manager/offer_place.pug
@@ -2,7 +2,7 @@ extends ../layout
 
 block content
   .container.d-flex.flex-column
-    h1.main-title 나라 관리
+    h2.main-title 장소 관리
     form(action=`/managers/offer_place`, method='POST')
       .form-group
         label(for='contry') 나라
