--- a/views/manager/user.pug
+++ b/views/manager/user.pug
@@ -2,7 +2,7 @@ extends ../layout
 
 block content
   .container
-    h1.main-title Users
+    h2.main-title 사용자 관리
     
     table.table.table-hover
       thead
