--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,6 @@
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
 
-a {
-  color: #00B7FF; }
 .jumbotron{
   background: url("/images/trip_jumbotron.jpg") no-repeat left center;
   background-size: cover;
@@ -27,4 +25,154 @@ a {
 .top{
   margin-top: 4em;
 }
-/*# sourceMappingURL=style.css.map */
+.footer{
+  padding: 2rem;
+  color: #808080b0;
+  border-top:rgb(185, 185, 185) solid 0.01rem;
+}
+
+nav{background-color: #49ceff8e;}
+.navbar{
+  padding: 0 .5rem 0 .5rem;
+}
+  
+.navbar-brand,.nav-link{color: #000;}
+.align-top{
+  margin: 0.2rem;
+}
+.nav-justified{
+  border-bottom: rgb(255, 255, 255) solid 0.1rem;
+  border-top: rgb(255, 255, 255) solid 0.04rem;
+}
+span.navbar-toggler-icon{
+  margin: 0;
+}
+.navbar-toggler {
+  color: rgba(0, 0, 0, 0.5);
+  border-color: rgba(0, 0, 0, 0);
+}
+.dropdown-toggle{
+  background-color: #9ae4ff;
+}
+
+.btn.focus, .btn:focus {
+  outline: none;
+  box-shadow: none;
+}
+.navbar-toggler-icon {
+  background-image: url('/images/menu.png');
+}
+.container{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+.sub{
+  margin: 0.5rem 0.2rem 0.2rem 0;
+  font-size: medium;
+}
+.login_form{
+  margin: 0.9rem 0 0.8rem 0;
+}
+label,p,span{
+  margin: .5rem;
+}
+.input-group .form-control{
+  flex:0.35 1 auto;
+}
+.breadcrumb-item{
+  color:#868e96;
+}
+.breadcrumb-item.active{
+  color: #000;
+}
+.btn-primary{
+  background-color: #9ae4ff;
+  border-color: #9ae4ff;
+  color: rgb(66, 66, 66);
+  margin:0.3rem 0 0.3rem 0;
+}
+.item{
+  padding: .8em;
+  margin: .8rem 0 .8rem 0;
+  background-color: #d8d8d88e;
+}
+
+.show_title{
+  font-weight: bolder;
+  margin: 1rem 1rem 1rem 0;
+}
+.order_form{
+  padding: .5rem 0 .5rem 0 ;
+  margin: .5rem 0 .5rem 0 ;
+  border-top: solid .05rem rgb(196, 196, 196);
+}
+.row_show .input-group {
+  width: 70%;
+}
+.row span{
+  margin-left: 1.5rem;
+}
+
+.show h4{
+  padding: .8rem 0 .8rem .4rem;
+  border-top: solid .05rem rgb(196, 196, 196);
+}
+.show .btn-primary{
+  width: 100%;
+}
+.row .btn-primary{
+  width: 40%;
+  margin-left: 1.4rem;
+}
+.img-thumbnail{
+  width: 50%;
+}
+.course_body{
+  display: flex;
+  flex-direction: row;
+}
+.course_item{
+  padding: 1em;
+  border-radius: .5rem;
+  background-color: #b6b6b65d;
+  margin: .25rem;
+}
+h5{
+  margin-left: .5rem;
+}
+.course_description{
+  margin: .25rem;
+}
+.guide_name img{
+  width: 3.5rem;
+  height: 3.5rem;
+  border-radius: 50%;
+  box-shadow: inset 0 0 1px rgba(0,0,0,.2);
+  margin-right: 1rem;
+}
+.guide_name p{
+  font-size:1.1rem;
+}
+@media screen and (max-width: 768px) {
+  .btn-primary{
+    width: 100%;
+  }
+  .row .btn-primary{
+    width: 40%;
+    margin-left: 1.4rem;
+  }
+  .course_body{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .dropdown-menu{
+    background-color: #9ae4ff;
+    border: none;
+  }
+  .input-group .form-control{
+    flex:1 1 auto;
+  }
+} 
+  
+/*# sourceMappingURL=style.css.map
