--- a/views/manager/edit.pug
+++ b/views/manager/edit.pug
@@ -2,14 +2,14 @@ extends ../layout
 
 block content
   .container
-    h1.main-title 유저 정보관리
-    form(action=`/managers/user/${user._id}`, method='POST')
+    h2.main-title 유저 관리
+    form(action=`/managers/user/${user._id}?_method=put`, method='POST')
       .form-group
         label(for='name') 이름
         input.form-control#guide_name(type='text', name='name', value = user.name)
       .form-group
         label(for='user_profile') 생성일자
-        p= user.createdAt
+        p= moment(user.createdAt).format('YYYY-MM-DD HH:mm:ss')
       .form-group
         label(for='role') 권한
         select#role.custom-select(name = 'role')
