--- a/views/signin.pug
+++ b/views/signin.pug
@@ -4,27 +4,28 @@ block content
   .container
     .clearfix
       form.form-signin(action='/signin', method='POST')
-        h3.form-signin-heading Signin
-        label.sr-only(for='email') Email address
-        input(
-          type='email', id='email', name='email', class='form-control', 
-          placeholder='Email address', required, autofocus
-        )
-        label.sr-only(for='password') Password
-        input(
-          type='password', id='password', name='password', class='form-control', 
-          placeholder='Password', required, autofocus
-        )
+        h3.form-signin-heading 로그인
+        .login_form
+          label.sr-only(for='email') 이메일
+          input(
+            type='email', id='email', name='email', class='form-control', 
+            placeholder='Email address', required, autofocus
+          )
+          label.sr-only(for='password') 비밀번호
+          input(
+            type='password', id='password', name='password', class='form-control', 
+            placeholder='Password', required, autofocus
+          )
         .checkbox
           label 
             input(type="checkbox", value="remember-me")
             |
             | Remember me
-        button.btn.btn-primary.btn-block(type='submit') Signin
+        button.btn.btn-primary.btn-block(type='submit') 로그인
         a.btn.btn-dark.btn-block(href='/auth/facebook')
           i.fa.fa-facebook.fa-lg
           | &nbsp;
-          | Signin with Facebook
+          | 페이스북으로 로그인하기
 
         div.sub 
-          a(href='/users/new') Signup
+          a(href='/users/new') 회원가입
