--- a/views/tour/course_edit.pug
+++ b/views/tour/course_edit.pug
@@ -42,6 +42,7 @@ block content
               input.form-control-file#file(type="file")
               input#url.form-control(type="text", readonly="readonly", name="photo", value="")
       button.btn.btn-primary.btn-lg.btn-block#add_btn(type='button' onclick='Onclick()') 코스 추가
+      input(type="hidden", name="tour_id", value=tour_id)
       button.btn.btn-primary(type='submit') 등록하기
   script#itemTemplate(type="text/template")
     .item.border
