--- a/views/tour/course_new.pug
+++ b/views/tour/course_new.pug
@@ -10,7 +10,7 @@ block content
     form(action = `/tours/new/${tour_id}`, method = 'post')
       .course_items
       button.btn.btn-primary.btn-lg.btn-block#add_btn(type='button' onclick='Onclick()') 코스 추가
-      button.btn.btn-primary(type='submit') 등록하기
+      button.btn.btn-primary.btn-lg.btn-block(type='submit') 등록하기
   script#itemTemplate(type="text/template")
     .item.border
       button.ml-2.mb-1.close(type='button', aria-label='Close',onclick='del(this)')
@@ -18,17 +18,19 @@ block content
       .form-group
             label(for='title') 코스 제목
             input.form-control#title(type='text', name='title')
-      .form-group
-        label(for='hour') 소요 시간
+      p 소요시간
+      .form-group.d-flex.flex-row
         - var n = 0;
         select#hour.custom-select(name = 'hour')
           while n<25
             option(value= n)= n++
+        span 시간
         -n = 0;
         select#minute.custom-select(name = 'minute')
           while n<60
             option(value= n)= n
             - n = n+10
+        span 분
       .form-group
         label(for='description') 코스 내용
         textarea.form-control#description( name='description', rows = '5',placeholder = "여행자들이 어떤 것을 기대할 수 있는지 사전에 머릿속에 그려볼 수 있도록 무엇을 하는 코스인지 자세하게 적어주세요.")
