--- a/views/user/order_list.pug
+++ b/views/user/order_list.pug
@@ -2,7 +2,7 @@ extends ../layout
 
 block content
   .container.d-flex.flex-column
-    h2.main-title tour list
+    h2.main-title 나의 예약 목록
     table.table.table-hover
       thead
         tr
@@ -17,7 +17,7 @@ block content
             td
               a(href=`/tours/show/${order.tour._id}`)=order.tour.title
             td= order.num_people
-            td= order.order_date
+            td= moment(order.order_date).format('YYYY-MM-DD HH:mm:ss')
             td= order.price
             td
               a.btn.btn-sm.need-confirm-btn.btn-outline-danger(href=`/users/order/${order._id}?_method=DELETE`)
