--- a/views/user/wishlist.pug
+++ b/views/user/wishlist.pug
@@ -2,6 +2,7 @@ extends ../layout
 
 block content
   .container.d-flex.flex-row
+    h2.main-title 장바구니
     each wish in wishlist
       .product
         a(href=`/tours/show/${wish.tour._id}`)
