--- a/views/user/wishlist.pug
+++ b/views/user/wishlist.pug
@@ -1,7 +1,7 @@
 extends ../layout
 
 block content
-  .container.d-flex.flex-row
+  .container.d-flex.flex-row.flex-wrap
     h2.main-title 장바구니
     each wish in wishlist
       .product
