--- a/views/user/wishlist.pug
+++ b/views/user/wishlist.pug
@@ -1,14 +1,15 @@
 extends ../layout
 
 block content
-  .container.d-flex.flex-row.flex-wrap
+  .container
     h2.main-title 장바구니
-    each wish in wishlist
-      .product
-        a(href=`/tours/show/${wish.tour._id}`)
-          div.card(style="width: 18rem;")
-            img.card-img-top(src=wish.tour.main_photo, alt="tour main photo")
-            div.card-body
-              h5.card-title=wish.tour.title
-              p.card-textSome= wish.tour.description
+    .wish.d-flex.flex-row.flex-wrap
+      each wish in wishlist
+        .product
+          a(href=`/tours/show/${wish.tour._id}`)
+            div.card(style="width: 18rem;")
+              img.card-img-top(src=wish.tour.main_photo, alt="tour main photo")
+              div.card-body
+                h5.card-title=wish.tour.title
+                p.card-textSome= wish.tour.description
 
