--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -117,7 +117,7 @@ label,p,span{
   padding: .8rem 0 .8rem .4rem;
   border-top: solid .05rem rgb(196, 196, 196);
 }
-.show .btn-primary{
+.row_show .btn-primary{
   width: 100%;
 }
 .row .btn-primary{
@@ -125,7 +125,6 @@ label,p,span{
   margin-left: 1.4rem;
 }
 .img-thumbnail{
-  width: 50%;
   width: 16.1rem;
   height: 12.1rem;
 }
@@ -162,9 +161,37 @@ h5{
 .index_product{
   margin: .5rem;
 }
+.input,.coment{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  background-color: #d8d8d883;
+  margin: .5rem 0 .5rem 0;
+  border-radius: .5rem;
+  padding: .8rem;
+}
+.input_form{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.input_form input,.input_form textarea{
+  width: 100%;
+  margin: .3rem;
+}
+.input button{
+  width: 13rem;
+  height: 16.5;
+  margin: .8rem;
+}
+.coment .body{
+  display: flex;
+  flex-direction: column;
+}
 @media screen and (max-width: 768px) {
   .btn-primary{
     width: 100%;
+    margin: .15rem;
   }
   .row .btn-primary{
     width: 40%;
@@ -181,6 +208,13 @@ h5{
   }
   .input-group .form-control{
     flex:1 1 auto;
+  }
+  .input{
+    flex-direction: column;
+  }
+  .input button{
+    width: 96%;
+    
   }
 } 
   
