--- a/views/includes/topnav.pug
+++ b/views/includes/topnav.pug
@@ -24,6 +24,7 @@ nav.navbar.navbar-expand-lg
                   a.dropdown-item(href=`/users/info`) 정보관리
                   a.dropdown-item(href=`/users/order`) 나의 예약 목록
                   a.dropdown-item(href='/users/wish') 장바구니
+                  a.dropdown-item(href='/users/review') 나의 리뷰
             li.nav-item
               a.nav-link(href='/signout') 로그아웃
           when 'guide'
@@ -44,6 +45,7 @@ nav.navbar.navbar-expand-lg
                   a.dropdown-item(href=`/users/info`) 정보관리
                   a.dropdown-item(href=`/users/order`) 나의 예약 목록
                   a.dropdown-item(href='/users/wish') 장바구니
+                  a.dropdown-item(href='/users/review') 나의 리뷰
             li.nav-item
               a.nav-link(href='/signout') 로그아웃
           when 'manager'
@@ -55,6 +57,7 @@ nav.navbar.navbar-expand-lg
                   a.dropdown-item(href='/managers/user') 유저 관리
                   a.dropdown-item(href=`/managers/offer_place`) 장소 관리
                   a.dropdown-item(href='/managers/offer') 상품 관리
+                  a.dropdown-item(href='/managers/review') 리뷰 관리
             li.nav-item
               .dropdown.mr-1
                 button#dropdownMenuOffset.btn.dropdown-toggle(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false', data-offset='10,20')
@@ -63,5 +66,6 @@ nav.navbar.navbar-expand-lg
                   a.dropdown-item(href=`/users/info`) 정보관리
                   a.dropdown-item(href=`/users/order`) 나의 예약 목록
                   a.dropdown-item(href='/users/wish') 장바구니
+                  a.dropdown-item(href='/users/review') 나의 리뷰
             li.nav-item
               a.nav-link(href='/signout') 로그아웃
